Update Slides and latex

--- a/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T15_US_microdata_windows.tex
+++ b/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T15_US_microdata_windows.tex
@@ -5,8 +5,14 @@
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}\\
                     &\multicolumn{1}{c}{1873-77}&\multicolumn{1}{c}{1873-76}&\multicolumn{1}{c}{1872-77}&\multicolumn{1}{c}{1872-76}\\
 \hline
+british\_hh          &     -34.813\sym{***}&     -33.681\sym{***}&     -35.832\sym{***}&     -35.006\sym{***}\\
+                    &     (2.713)         &     (2.721)         &     (2.768)         &     (2.788)         \\
+[1em]
 British $\times$ Post 1877&      -2.477\sym{**} &      -3.608\sym{**} &      -1.457         &      -2.283         \\
                     &     (1.219)         &     (1.558)         &     (1.135)         &     (1.428)         \\
+[1em]
+Constant            &     202.214\sym{***}&     198.939\sym{***}&     203.308\sym{***}&     200.447\sym{***}\\
+                    &     (0.677)         &     (0.666)         &     (0.693)         &     (0.686)         \\
 \hline
 Observations        &     563,329         &     563,329         &     542,770         &     542,770         \\
 \hline\hline
