--- a/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T14_US_Microdata.tex
+++ b/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T14_US_Microdata.tex
@@ -1,16 +1,22 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{6}{c}}
+\begin{tabular}{l*{2}{c}}
 \hline\hline
-                    &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
-                    &\multicolumn{1}{c}{bc}&\multicolumn{1}{c}{bc}&\multicolumn{1}{c}{bc}&\multicolumn{1}{c}{bc}&\multicolumn{1}{c}{bc}&\multicolumn{1}{c}{bc}\\
+                    &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}\\
+                    &\multicolumn{1}{c}{Married Women}&\multicolumn{1}{c}{Single Women}\\
 \hline
-British $\times$ Post 1877&      -2.739\sym{**} &      -2.946\sym{**} &      -2.477\sym{**} &      -0.041         &      -0.166         &      -0.164         \\
-                    &     (1.274)         &     (1.240)         &     (1.219)         &     (0.142)         &     (0.141)         &     (0.141)         \\
+British Origins     &     -36.239\sym{***}&       0.008         \\
+                    &     (2.810)         &     (0.130)         \\
+[1em]
+British $\times$ Post 1877&      -2.739\sym{**} &      -0.041         \\
+                    &     (1.274)         &     (0.142)         \\
+[1em]
+Constant            &     202.617\sym{***}&       0.331\sym{***}\\
+                    &     (0.729)         &     (0.012)         \\
 \hline
-Observations        &     563,329         &     563,329         &     563,329         &     349,686         &     349,686         &     349,686         \\
+Observations        &     563,329         &     349,686         \\
 \hline\hline
-\multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{3}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{3}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
