--- a/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T1_Canada_agg.tex
+++ b/paper_with_code/Replication_Beach_Hanlon_Fertility_ReStud/Results/T1_Canada_agg.tex
@@ -5,16 +5,16 @@
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}\\
                     &\multicolumn{1}{c}{1872-1880}&\multicolumn{1}{c}{1872-1880}&\multicolumn{1}{c}{1864-1885}\\
 \hline
-British-origin shr. \multicolumn{1}{r}{$\times$ 1864-70 period}&                     &                     &      -4.256         \\
+brit\_origin\_2       &                     &                     &      -4.256         \\
                     &                     &                     &     (6.247)         \\
 [1em]
-British-origin shr. \multicolumn{1}{r}{$\times$ 1872-77 period}&                     &                     &       0.000         \\
+brit\_origin\_3       &                     &                     &       0.000         \\
                     &                     &                     &         (.)         \\
 [1em]
-British-origin shr. \multicolumn{1}{r}{$\times$ 1878-80 period}&     -16.080\sym{***}&     -17.801\sym{***}&     -17.801\sym{***}\\
+brit\_origin\_4       &     -16.080\sym{***}&     -17.801\sym{***}&     -17.801\sym{***}\\
                     &     (1.580)         &     (2.304)         &     (2.325)         \\
 [1em]
-British-origin shr. \multicolumn{1}{r}{$\times$ 1881-85 period}&                     &                     &     -16.001\sym{**} \\
+brit\_origin\_5       &                     &                     &     -16.001\sym{**} \\
                     &                     &                     &     (6.752)         \\
 \hline
 Observations        &         202         &         202         &         404         \\
